rosPart/log/build_2024-06-22_22-29-23/robotController/stderr.log
  File "/home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController/camera_control.py", line 33
    if __name__ == '__main__'
                             ^
SyntaxError: expected ':'

